--- a/pd/01.md
+++ b/pd/01.md
@@ -3,7 +3,7 @@ import
 import numpy as np 
 ```
 
-array generation function
+Array Generation function
 ```
 arr = np.arange(1,10,2)
 arr = np.zeros(5)
@@ -12,3 +12,40 @@ arr = np.ones(5)
 arr = np.ones((5,6))
 arr = np.linspace(1,10,3)
 ```
+Random Generation function
+```
+np.random.rand(5)
+np.random.randn(5)
+np.random.randint(6)
+np.random.randint(10,20,5)
+```
+Array Attributes
+```
+arr=np.array([[1,2,3],[4,5,6],[7,8,9]])
+arr
+arr.shape
+arr.size
+arr.dtype
+```
+Array Methods
+```
+arr=np.array([[1,2,3],[4,5,6],[7,8,9]])
+arr.min()
+arr.max()
+arr.sum()
+np.sum(arr,axis=0)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
