--- a/pd/01.md
+++ b/pd/01.md
@@ -35,7 +35,11 @@ arr.max()
 arr.sum()
 np.sum(arr,axis=0)
 ```
-
+Resizing & Reshaping 
+```
+arr = np.arange(1,31)
+arr = arr.reshape(5,6)
+```
 
 
 
