--- a/pd/01.md
+++ b/pd/01.md
@@ -1,1 +1,13 @@
+```
+age = [20,25,18,15,5]
+labels = ['a','b','c','d','e']
+data = {
+    'a':10,
+    'b':21,
+    'c':30,
+    'd':11,
+}
 
+pd.Series(age,index=labels)
+pd.Series(data)
+```
