--- a/pd/02. dataframe.md
+++ b/pd/02. dataframe.md
@@ -14,3 +14,29 @@ data = {
 ```
 df = pd.DataFrame(data)
 ```
+comumn selection
+```
+df['name']
+df[['name','age']]
+```
+rows selection
+```
+df.loc[0]
+df.loc[[0,1]]
+```
+selecting subsets of rows and columns
+```
+df.loc[[0,1]][['city','salary']]
+```
+conditional selection
+```
+df[df['age']>25]
+df[(df['age']>20) & (df['city'] == 'Dinajpur')]
+```
+delete column
+```
+df.drop('designation',axis=1)
+df.drop(['city','salary'],axis=1)
+```
+
+
