--- a/pd/08. operations.md
+++ b/pd/08. operations.md
@@ -20,6 +20,13 @@ df.describe()
 ```
 
 ```
+def square(x):
+    return x**2
+
+df['sales'] = df['sales'].apply(square)
+```
+
+```
 df['sales'] = df['sales'].apply(lambda x:x**2)
 df
 ```
